@@ -22,6 +22,7 @@ Version 0.3r
  - Fertilium.
  - Virilium.
 * You can now save/sleep at the penthouse after befriending the twins. This gives you another free safe spot in Rigard.
+* Patches is now slightly more talkative.
 
 --------------------------------------------
              PREVIOUS VERSIONS
